test/functions/deitz/test_var_function2.good
test_var_function2.chpl:2: In function 'A':
test_var_function2.chpl:5: error: illegal expression to return by ref
